--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     },
     "dependencies": {
         "element-ui": "^2.4.6",
+        "js-base64": "^2.5.1",
         "load-script": "^1.0.0",
         "moment": "^2.22.2",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vuex": "^3.1.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.2.6",
