--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "website",
-    "version": "0.1.0",
-    "description": "A Vue.js project for Oasis Games",
-    "author": "Minhao Zhang <minhao.zhang@qq.com>",
+    "version": "1.0.0",
+    "description": "A Vue.js project",
+    "author": "Gaoshiyong <gaoshiyong1272@vip.163.com>",
     "private": true,
     "scripts": {
         "clean": "node build/clean.js",
