--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
         "setup-library": "node build/setup-library.js"
     },
     "dependencies": {
+        "babel-polyfill": "^6.26.0",
         "element-ui": "^2.4.6",
         "js-base64": "^2.5.1",
         "load-script": "^1.0.0",
         "moment": "^2.22.2",
         "vue": "^2.5.17",
+        "vue-clipboard2": "^0.3.1",
+        "vue-i18n": "^8.15.1",
         "vuex": "^3.1.1"
     },
     "devDependencies": {
