--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
         "release": "node build/build.js -p",
         "library": "node build/build.js -l",
         "postinstall": "node build/post-install.js",
-        "setup-library": "node build/setup-library.js"
+        "setup-library": "node build/setup-library.js",
+        "create-vue": "node build/create-vue.js"
     },
     "dependencies": {
+        "argparse": "^1.0.10",
         "babel-polyfill": "^6.26.0",
         "element-ui": "^2.4.6",
+        "file-saver": "^2.0.2",
+        "jquery": "^3.4.1",
         "js-base64": "^2.5.1",
         "load-script": "^1.0.0",
         "moment": "^2.22.2",
         "vue": "^2.5.17",
         "vue-clipboard2": "^0.3.1",
         "vue-i18n": "^8.15.1",
-        "vuex": "^3.1.1"
+        "vuex": "^3.1.1",
+        "xlsx": "^0.15.3"
     },
     "devDependencies": {
         "autoprefixer": "^7.2.6",
