--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "argparse": "^1.0.10",
+        "axios": "^0.19.0",
         "babel-polyfill": "^6.26.0",
         "element-ui": "^2.4.6",
         "file-saver": "^2.0.2",
