--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "load-script": "^1.0.0",
         "moment": "^2.22.2",
         "node-notifier": "^6.0.0",
+        "simple-pinyin": "^3.0.2",
         "vue": "^2.5.17",
         "vue-clipboard2": "^0.3.1",
         "vue-i18n": "^8.15.1",
