--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ build/resolve-deps/*.json
 build/custom-transform-to-require-settings/*.json
 build/copy-file-settings/*.json
 node_modules/
+dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
